RESOLVED FIXED154033
[GTK][EFL] Fix several build configuration related to SamplingProfiler after r196245
https://bugs.webkit.org/show_bug.cgi?id=154033
Summary [GTK][EFL] Fix several build configuration related to SamplingProfiler after ...
Csaba Osztrogonác
Reported 2016-02-09 09:06:01 PST
For example the --minimal build is broken due to two reason: - cmake defines ENABLE_SAMPLING_PROFILER to true, which causes redefinition in Platform.h - JIT is disabled, but sampling profiler is enabled, which is unsupported configuration Fix is coming.
Attachments
Patch (2.81 KB, patch)
2016-02-09 09:21 PST, Csaba Osztrogonác
no flags
Csaba Osztrogonác
Comment 1 2016-02-09 09:21:51 PST
WebKit Commit Bot
Comment 2 2016-02-09 10:25:38 PST
Comment on attachment 270933 [details] Patch Clearing flags on attachment: 270933 Committed r196315: <http://trac.webkit.org/changeset/196315>
WebKit Commit Bot
Comment 3 2016-02-09 10:25:40 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.