[GTK][EFL] Fix several build configuration related to SamplingProfiler after r196245 https://bugs.webkit.org/show_bug.cgi?id=154033

Reviewed by Michael Catanzaro.

.:

* Source/cmake/WebKitFeatures.cmake:

Source/WTF:

* wtf/Platform.h:


Canonical link: https://commits.webkit.org/172138@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@196315 268f45cc-cd09-0410-ab3c-d52691b4dbfc